# CodeBaton

./: .gitignore  Cargo.toml  README.md  RECOVERY.md  TEAM.md
.github/workflows/: build-dmg.yml
agents/: core.md  frontend.md  net.md  qa.md  reviewer.md  session.md
aisync-app/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
aisync-app/capabilities/: default.json
aisync-app/scripts/: hide-dmg-volicon.sh
aisync-app/src/: backend.rs  commands.rs  dto.rs  lib.rs  main.rs  state.rs
aisync-app/tests/: sync_g6.rs  sync_safety.rs
aisync-app/tests/common/: mod.rs
aisync-app/ui/: App.tsx  ChatTab.tsx  Dialog.tsx  FileTransferTab.tsx  ProjectCard.tsx  Sidebar.tsx  StatusBar.tsx  dialogs.tsx  i18n.ts  ipc.ts  notifications.ts  shortcuts.ts  store.tsx  styles.css  types.ts  util.ts
aisync-app/ui/pages/: Overview.tsx  PeerDetail.tsx  Settings.tsx
aisync-cli/: Cargo.toml
aisync-cli/src/: main.rs
aisync-cli/tests/: commands.rs
aisync-core/: Cargo.toml
aisync-core/src/: lib.rs
aisync-discovery/: Cargo.toml
aisync-discovery/src/: lib.rs
aisync-session/: Cargo.toml
aisync-session/src/: claude_code.rs  converter.rs  lib.rs  path_rewriter.rs
aisync-sync/: Cargo.toml
aisync-sync/src/: config.rs  lib.rs  watcher.rs
aisync-sync/tests/: phase2.rs
aisync-transport/: Cargo.toml
aisync-transport/src/: lib.rs
architecture/: 01-state-model.md  02-entities.md  03-identity.md  04-fields.md  05-dependencies.md  06-operations.md  07-truth-hierarchy.md  08-consistency-rules.md  09-dirty-state.md  10-concurrency.md  11-migration.md  12-environment.md  INDEX.md  READING-GUIDE.md  _refactor-symbol-map.txt  review-final.md  review-phase1.md
architecture/refs/: bug-c17-auto-sync-paused.md
codebaton-app/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
codebaton-app/capabilities/: default.json
codebaton-app/icons/: icon.icns
codebaton-app/src/: backend.rs  commands.rs  dto.rs  lib.rs  main.rs  state.rs  tray.rs
codebaton-app/src/backend/: ai_tools.rs  auto_sync_gate.rs  auto_sync_orchestration.rs  claude_paths.rs  events.rs  exclude.rs  file_transfer.rs  handoff_preview.rs  history.rs  identity.rs  messaging.rs  mod.rs  peers.rs  projects.rs  serve.rs  session_scanner.rs  session_stage.rs  split_brain.rs  sync_push.rs  time_util.rs  transport.rs  watchers.rs  workspace_conflict.rs  workspaces.rs
codebaton-app/tests/: framework_smoke.rs  sync_g6.rs  sync_safety.rs
codebaton-app/tests/common/: mod.rs
codebaton-app/ui/: App.tsx  ChatTab.tsx  FileTransferTab.tsx  ProjectCard.tsx  StatusBar.tsx  dialogs.tsx  i18n.ts  ipc.ts  main.tsx  notifications.ts  shortcuts.ts  store.tsx  styles.css  types.ts  util.ts
codebaton-app/ui/pages/: Overview.tsx  PeerDetail.tsx
codebaton-cli/: Cargo.toml
codebaton-cli/src/: main.rs
codebaton-cli/tests/: commands.rs
codebaton-core/: Cargo.toml
codebaton-discovery/: Cargo.toml
codebaton-discovery/src/: lib.rs
codebaton-session/: Cargo.toml
codebaton-session/src/: claude_code.rs  converter.rs  lib.rs  path_rewriter.rs
codebaton-sync/: Cargo.toml
codebaton-sync/src/: config.rs  lib.rs  watcher.rs
codebaton-sync/tests/: phase2.rs
codebaton-transport/: Cargo.toml
codebaton-transport/src/: lib.rs
profiles/: AGENTS.md
scripts/: run-tests.sh
