[package]
name = "aisync-sync"
edition.workspace = true
version.workspace = true

[dependencies]
aisync-core.workspace = true
aisync-transport.workspace = true
blake3.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
aisync-session = { path = "../aisync-session" }
