[package]
name = "aisync-transport"
edition.workspace = true
version.workspace = true

[dependencies]
aisync-core.workspace = true
blake3.workspace = true
fast_rsync = "0.2"
globset = "0.4"
rayon = "1"
rcgen = "0.13"
rustls = "0.23"
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
