[package]
name = "codebaton-app"
edition.workspace = true
version.workspace = true
description = "CodeBaton desktop application (Tauri v2)"
default-run = "codebaton"

[lib]
name = "codebaton_app_lib"
path = "src/lib.rs"

[[bin]]
name = "codebaton"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
codebaton-core.workspace = true
codebaton-transport = { path = "../codebaton-transport" }
codebaton-sync = { path = "../codebaton-sync" }
codebaton-discovery = { path = "../codebaton-discovery" }
codebaton-session = { path = "../codebaton-session" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
blake3.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri = { version = "=2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "=2.3.3"
tauri-plugin-dialog = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
