[package]
name = "codebaton-discovery"
edition.workspace = true
version.workspace = true

[dependencies]
codebaton-core.workspace = true
blake3.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mdns-sd = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
